name:                haskell-api-helpers-shared
version:             0.1.0.1
synopsis:            Some API helpers I need
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-api-helpers-shared#readme
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Api.Helpers.Shared
  build-depends:       base
                     , aeson
                     , bytestring
                     , connection
                     , data-default
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lens
                     , lens-aeson
                     , mtl
                     , string-conversions
                     , text
                     , transformers
                     , wreq
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite haskell-api-helpers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-api-helpers-shared
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-api-helpers-shared
